<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/nav_games"
        android:title="@string/nav_home">
        <menu>
            <item
                android:id="@+id/nav_slots"
                android:icon="@drawable/ic_slots"
                android:title="@string/nav_slots" />
            <item
                android:id="@+id/nav_roulette"
                android:icon="@drawable/ic_roulette"
                android:title="@string/nav_roulette" />
            <item
                android:id="@+id/nav_blackjack"
                android:icon="@drawable/ic_blackjack"
                android:title="@string/nav_blackjack" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
