<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/casino_green"
    android:padding="@dimen/spacing_medium"
    tools:context=".ui.games.slots.SlotMachineFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot_machine_title"
        android:textAppearance="@style/TextAppearance.MobileSlots.Headline1"
        android:textColor="@color/casino_gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/balance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:textAppearance="@style/TextAppearance.MobileSlots.Headline2"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        tools:text="Balance: 1000" />

    <!-- Slot Reels Container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reels_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:background="@color/roulette_black"
        android:padding="@dimen/spacing_medium"
        app:layout_constraintBottom_toTopOf="@id/result_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balance_text">

        <androidx.cardview.widget.CardView
            android:id="@+id/reel1_card"
            android:layout_width="@dimen/slot_reel_size"
            android:layout_height="@dimen/slot_reel_size"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/reel2_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/reel1"
                android:layout_width="@dimen/slot_symbol_size"
                android:layout_height="@dimen/slot_symbol_size"
                android:layout_gravity="center"
                android:contentDescription="@string/slot_machine_title"
                android:src="@drawable/slot_cherry" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/reel2_card"
            android:layout_width="@dimen/slot_reel_size"
            android:layout_height="@dimen/slot_reel_size"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_small"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/reel3_card"
            app:layout_constraintStart_toEndOf="@id/reel1_card"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/reel2"
                android:layout_width="@dimen/slot_symbol_size"
                android:layout_height="@dimen/slot_symbol_size"
                android:layout_gravity="center"
                android:contentDescription="@string/slot_machine_title"
                android:src="@drawable/slot_lemon" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/reel3_card"
            android:layout_width="@dimen/slot_reel_size"
            android:layout_height="@dimen/slot_reel_size"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/reel2_card"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/reel3"
                android:layout_width="@dimen/slot_symbol_size"
                android:layout_height="@dimen/slot_symbol_size"
                android:layout_gravity="center"
                android:contentDescription="@string/slot_machine_title"
                android:src="@drawable/slot_bell" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:textAppearance="@style/TextAppearance.MobileSlots.Headline2"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reels_container"
        tools:text="You won 100!" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bet_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/bet"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/casino_gold"
        app:layout_constraintBottom_toBottomOf="@id/bet_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/bet_label"
        tools:text="Bet: 10" />

    <com.google.android.material.slider.Slider
        android:id="@+id/bet_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:stepSize="10"
        android:valueFrom="10"
        android:valueTo="1000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bet_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/spin_button"
        style="@style/Widget.MobileSlots.Button.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/spin"
        android:textSize="@dimen/text_size_xxlarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bet_slider" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shake_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/slot_shake_to_spin"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="@android:color/white"
        android:alpha="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spin_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
